更新项目配置
- 更新图标
- 更新插件ID
- 更新JDK版本